Blockout level rebuilt.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -46,7 +46,7 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/maps/MainMenu
+LastLevel=/Game/Level/maps/Blockout
 
 [ModuleFileTracking]
 CoopGame.TimeStamp=2020.05.12-17.23.04
@@ -5128,7 +5128,7 @@ WBP_LevelSelectMenu_C.Localization=True
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/UI/WBP_MainMenu.WBP_MainMenu
-OpenAssetsAtExit=/Game/Level/maps/MainMenu.MainMenu:PersistentLevel.MainMenu
+OpenAssetsAtExit=/Game/UI/WBP_LevelSelectMenu.WBP_LevelSelectMenu
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5212,12 +5212,13 @@ Level=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/Coo
 Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
-MRUItem0=/Game/Level/maps/MainMenu
-MRUItem1=/Game/Level/maps/VoidMap
-MRUItem2=/Game/Level/maps/Wimbledon
-MRUItem3=/Game/Level/maps/Blockout_P
-MRUItem4=/Game/Level/maps/TestMap
-MRUItem5=/Game/maps/VoidMap
+MRUItem0=/Game/Level/maps/Blockout
+MRUItem1=/Game/Level/maps/MainMenu
+MRUItem2=/Game/Level/maps/VoidMap
+MRUItem3=/Game/Level/maps/Wimbledon
+MRUItem4=/Game/Level/maps/Blockout_P
+MRUItem5=/Game/Level/maps/TestMap
+MRUItem6=/Game/maps/VoidMap
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,
@@ -5325,7 +5326,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -5351,8 +5352,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
 StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
@@ -5502,15 +5503,15 @@ REINST_BP_PlayerPawn_C_103="\"Object.Components.camera.Object.PostProcess.PostPr
 REINST_BP_PlayerPawn_C_109="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
+PanelWidget=
 WBP_MainMenu_C="\"Object.Appearance.ColorAndOpacity\" "
 WBP_LevelSelectMenu_C="\"Object.Appearance.ColorAndOpacity\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Objects/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
 RecentlyPlaced=/Game/Objects/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/Objects/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Objects/Characters/BP_AIPlayer.BP_AIPlayer;
 RecentlyPlaced=/Game/Objects/TrackerBot/BP_TrackerBot.BP_TrackerBot;
 RecentlyPlaced=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
@@ -5529,26 +5530,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WBP_LevelSelectMenu
+MRUItem0=/Game/Level/maps/Blockout
 MRUItem1=/Game/Level/maps/MainMenu
-MRUItem2=/Game/Level/maps/VoidMap
-MRUItem3=/Game/Level/maps/Wimbledon
-MRUItem4=/Game/Level/maps/Blockout_P
-MRUItem5=/Game/Level/maps/TestMap
-MRUItem6=/Game/UI/WBP_MainMenu
-MRUItem7=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem8=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem9=/Game/GameModes/BP_TestGameMode
-MRUItem10=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem11=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
-MRUItem12=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem13=/Game/Objects/Projectiles/BP_GrenadeProjectile
-MRUItem14=/Game/Objects/Weapons/BP_Shotgun
-MRUItem15=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem16=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
-MRUItem17=/Game/Objects/Powerups/VisualEffects/sunflare
-MRUItem18=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
-MRUItem19=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
+MRUItem2=/Game/Level/maps/FloatingIsland
+MRUItem3=/Game/UI/WBP_LevelSelectMenu
+MRUItem4=/Game/Level/maps/VoidMap
+MRUItem5=/Game/Level/maps/Wimbledon
+MRUItem6=/Game/Level/maps/Blockout_P
+MRUItem7=/Game/Level/maps/TestMap
+MRUItem8=/Game/UI/WBP_MainMenu
+MRUItem9=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem10=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem11=/Game/GameModes/BP_TestGameMode
+MRUItem12=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem13=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem14=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem15=/Game/Objects/Projectiles/BP_GrenadeProjectile
+MRUItem16=/Game/Objects/Weapons/BP_Shotgun
+MRUItem17=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem18=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
+MRUItem19=/Game/Objects/Powerups/VisualEffects/sunflare
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
