Added dependencies, refresshed the project files in editor and added includes to be able to configure sessions.

--- a/CoopGame/Config/DefaultEngine.ini
+++ b/CoopGame/Config/DefaultEngine.ini
@@ -9,8 +9,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level/maps/VoidMap.VoidMap
-GameDefaultMap=/Game/Level/maps/VoidMap.VoidMap
+EditorStartupMap=/Game/Level/maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Level/maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/Engine.CollisionProfile]
@@ -71,6 +71,12 @@ GlobalDefaultGameMode=/Script/Engine.GameModeBase
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/NavigationSystem.RecastNavMesh]
+bForceRebuildOnLoad=True
+
+[OnlineSubsystem]
+DefaultPlatformService=Null
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -116,6 +122,4 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType2,Name="FleshVulnerable")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
-[/Script/NavigationSystem.RecastNavMesh]
-bForceRebuildOnLoad=True
 
