Created a Widget button for level selection. Created a widget class to get map names.

--- a/CoopGame/Config/DefaultEngine.ini
+++ b/CoopGame/Config/DefaultEngine.ini
@@ -9,9 +9,10 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level/maps/MainMenu.MainMenu
-GameDefaultMap=/Game/Level/maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Level/MainMenu.MainMenu
+GameDefaultMap=/Game/Level/MainMenu.MainMenu
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GameInstanceClass=/Script/CoopGame.SGameInstance
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -121,5 +122,3 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="FleshDefault")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="FleshVulnerable")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
