Created widget blueprint from the level selection box widget and populated it with buttons on pre construction.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,8 +49,8 @@ GridEnabled=False
 LastLevel=/Game/Level/MainMenu
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.17-16.01.54
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.05.17-16.31.31
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -5134,12 +5134,25 @@ WBP_LevelSelectionButton_C.Performance=True
 WBP_LevelSelectionButton_C.Clipping=True
 WBP_LevelSelectionButton_C.Navigation=True
 WBP_LevelSelectionButton_C.Localization=True
+WBP_LevelSelectionBox_C.Appearance=True
+WBP_LevelSelectionBox_C.Input=True
+WBP_LevelSelectionBox_C.Interaction=True
+WBP_LevelSelectionBox_C.Behavior=True
+WBP_LevelSelectionBox_C.Render Transform=True
+WBP_LevelSelectionBox_C.Performance=True
+WBP_LevelSelectionBox_C.Clipping=True
+WBP_LevelSelectionBox_C.Navigation=True
+WBP_LevelSelectionBox_C.Localization=True
+StrProperty.Variable=True
+StrProperty.DefaultValueCategory=True
+K2Node_SetFieldsInStruct.PinOptions=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/UI/WBP_LevelSelectionButton.WBP_LevelSelectionButton
+OpenAssetsAtExit=/Game/UI/WBP_LevelSelectionBox.WBP_LevelSelectionBox
 OpenAssetsAtExit=/Game/UI/WBP_LevelSelectMenu.WBP_LevelSelectMenu
+OpenAssetsAtExit=/Game/UI/WBP_LevelSelectionButton.WBP_LevelSelectionButton
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5338,6 +5351,7 @@ PlayerController=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Render
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 WBP_LevelSelectMenu_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 WBP_LevelSelectionButton_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
+VerticalBoxSlot=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
@@ -5368,7 +5382,7 @@ ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.Alpha
 ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Visual=
 StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
@@ -5518,12 +5532,14 @@ REINST_BP_PlayerPawn_C_103="\"Object.Components.camera.Object.PostProcess.PostPr
 REINST_BP_PlayerPawn_C_109="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" "
 WBP_MainMenu_C="\"Object.Appearance.ColorAndOpacity\" "
 WBP_LevelSelectMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WBP_LevelSelectionButton_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" "
+WBP_LevelSelectionBox_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+SLevelSelectionBoxWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -5548,26 +5564,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WBP_LevelSelectMenu
-MRUItem1=/Game/UI/WBP_LevelSelectionButton
-MRUItem2=/Game/Level/MainMenu
-MRUItem3=/Game/GameModes/BP_TestGameMode
-MRUItem4=/Game/Level/maps/MainMenu
-MRUItem5=/Game/Level/maps/FloatingIsland
-MRUItem6=/Game/Level/maps/Wimbledon
-MRUItem7=/Game/Level/maps/Blockout
-MRUItem8=/Game/Level/maps/VoidMap
-MRUItem9=/Game/Level/maps/Blockout_P
-MRUItem10=/Game/Level/maps/TestMap
-MRUItem11=/Game/UI/WBP_MainMenu
-MRUItem12=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem13=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem14=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem15=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
-MRUItem16=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem17=/Game/Objects/Projectiles/BP_GrenadeProjectile
-MRUItem18=/Game/Objects/Weapons/BP_Shotgun
-MRUItem19=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem0=/Game/UI/WBP_LevelSelectionButton
+MRUItem1=/Game/UI/WBP_LevelSelectMenu
+MRUItem2=/Game/UI/WBP_LevelSelectionBox
+MRUItem3=/Game/Level/MainMenu
+MRUItem4=/Game/GameModes/BP_TestGameMode
+MRUItem5=/Game/Level/maps/MainMenu
+MRUItem6=/Game/Level/maps/FloatingIsland
+MRUItem7=/Game/Level/maps/Wimbledon
+MRUItem8=/Game/Level/maps/Blockout
+MRUItem9=/Game/Level/maps/VoidMap
+MRUItem10=/Game/Level/maps/Blockout_P
+MRUItem11=/Game/Level/maps/TestMap
+MRUItem12=/Game/UI/WBP_MainMenu
+MRUItem13=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem14=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem15=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem16=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem17=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem18=/Game/Objects/Projectiles/BP_GrenadeProjectile
+MRUItem19=/Game/Objects/Weapons/BP_Shotgun
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
